--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "azure-messaging-webpubsubservice>=1.3.0",
     "azure-mgmt-resource>=24.0.0",
     "dotenv>=0.9.9",
+    "google-genai>=1.52.0",
     "mem0ai>=1.0.0",
     "sendgrid>=6.12.5",
 ]
